--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "test": "vitest run",
     "format": "biome format",
     "lint": "biome lint",
-    "check": "biome check"
+    "check": "biome check",
+    "generate": "graphql-codegen"
   },
   "dependencies": {
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@t3-oss/env-core": "^0.12.0",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-query": "^5.66.5",
@@ -21,6 +23,7 @@
     "@tanstack/react-router-devtools": "^1.130.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "graphql": "^16.11.0",
     "lucide-react": "^0.476.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -30,14 +33,16 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@0no-co/graphqlsp": "^1.15.0",
     "@biomejs/biome": "1.9.4",
+    "@graphql-codegen/cli": "^5.0.7",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "jsdom": "^26.0.0",
-    "typescript": "^5.7.2",
+    "typescript": "^5.9.2",
     "vite": "^6.3.5",
     "vitest": "^3.0.5",
     "web-vitals": "^4.2.4"
